# fraud-detection-mlops

./: .gitignore  Makefile  pyproject.toml  send_predictions.py
.github/workflows/: cd.yml  ci.yml
configs/: feature_config.yaml  model_config.yaml  monitoring_config.yaml  serving_config.yaml
dashboards/: fraud_detection.json
docker/: Dockerfile  docker-compose.yml  prometheus.yml
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
src/data/: ingest.py  split.py  validate.py
src/features/: engineer.py
src/monitoring/: drift.py  metrics.py  retrain_trigger.py
src/pipelines/: monitoring_pipeline.py  training_pipeline.py
src/registry/: promote.py
src/serving/: app.py  predict.py  schemas.py
src/training/: evaluate.py  imbalance.py  train.py
tests/: conftest.py  test_api.py  test_data_validation.py  test_features.py  test_training.py
